--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,5 +1,5 @@
 
-
+@import "./styles/_colors";
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -19,4 +19,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: $background-color;
+  display: grid;
+  place-items: center;
+  height: 100%;
 }
