--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,8 +1,5 @@
-.main {
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
-  // align-items: center;
-  // padding: 6rem;
-  // min-height: 100vh;
+.logo {
+  display: block;
+  margin-inline: auto;
+  margin-bottom: 16px;
 }
