--- a/app/components/Input/Input.module.scss
+++ b/app/components/Input/Input.module.scss
@@ -6,10 +6,11 @@
 
 .icon {
     position: absolute;
-    top: 50%;
-    left: 6px;
-    height: 20px;
+    left: 8px;
     width: 14px;
+    height: 22px;
+    top: 56%;
+    pointer-events: none;
 }
 
 .input {
@@ -46,5 +47,6 @@
 
 .label {
     color: $grayish-cyan;
-    margin-bottom: 6px;
+    margin-bottom: 12px;
+    display: inline-block;
 }
