--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,5 +1,14 @@
+
 .logo {
   display: block;
   margin-inline: auto;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
+}
+
+.main {
+  padding: 32px 16px 16px;
+
+  @include mobile {
+    padding: 32px 0 0 !important;
+  }
 }
