--- a/app/components/Input/Input.module.scss
+++ b/app/components/Input/Input.module.scss
@@ -49,3 +49,14 @@
     margin-bottom: 12px;
     display: inline-block;
 }
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.error {
+    color: red;
+}
