--- a/app/components/PricingCard/PricingCard.module.scss
+++ b/app/components/PricingCard/PricingCard.module.scss
@@ -41,6 +41,11 @@
     }
 }
 
+.tipInputsLabel {
+    color: $dark-grayish-cyan;
+    margin-bottom: 12px;
+}
+
 .customInput {
     text-align: center;
 }
