--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,12 +1,10 @@
-
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 }
-
 
 * {
   box-sizing: border-box;
@@ -22,5 +20,6 @@ body {
   display: grid;
   place-items: center;
   height: 100%;
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
+  min-height: 840px;
 }
