--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -8,5 +8,5 @@ $light-grayish-cyan: hsl(185, 41%, 84%);
 $very-light-grayish-cyan: hsl(189, 41%, 97%);
 $white: hsl(0, 0%, 100%);
 
-$background-color: #C5E4E7;
-$active-color: #25C2AD;
+$background-color: #c5e4e7;
+$active-color: #25c2ad;
